<resources>
    <string name="app_name">Moto gymkhana</string>

    <!--    TOASTS-->
    <string name="error">ERROR!!!</string>
    <string name="error_io">IO ERROR!!!</string>


    <!--    TITLES-->
    <string name="stages_title">STAGES</string>
    <string name="championships_title">CHAMPIONSHIPS</string>
    <string name="favorites_title">FAVORITES</string>


    <!--    BUTTONS-->
    <string name="open_championships_bt">CHAMPIONSHIPS</string>


    <string name="favorites_list_is_empty">favorites list is empty</string>
    <string name="save">SAVE</string>
    <string name="second_attempt">Second attempt</string>
    <string name="is_fail">Is fail</string>
    <string name="first_attempt">First attempt</string>
    <string name="time">TIME</string>
    <string name="save_settings">SAVE SETTINGS</string>
    <string name="stop_watch_bt">STOP WATCH</string>

</resources>