<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/favoritesTextView"
        style="@style/TitleTextView"
        android:layout_width="0dp"
        android:layout_margin="@dimen/medium_space"
        android:background="@drawable/layout_bg"
        android:padding="@dimen/low_space"
        android:text="@string/favorites_title"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/favoritesEmptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_list_is_empty"
        android:textColor="@color/onBackground"
        app:layout_constraintBottom_toTopOf="@+id/openTimeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_space"
        android:layout_marginBottom="@dimen/medium_space"
        android:background="@color/background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/openTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/favoritesTextView"
        tools:context=".app.screens.main.favorites.FavoritesFragment"
        tools:listitem="@layout/item_championship"
        tools:visibility="visible" />

    <Button
        android:id="@+id/openTimeButton"
        style="@style/ButtonStyle"
        android:layout_margin="@dimen/medium_space"
        android:text="@string/stop_watch_bt"
        app:layout_constraintBottom_toTopOf="@+id/openChampionshipsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/openChampionshipsButton"
        style="@style/ButtonStyle"
        android:layout_margin="@dimen/medium_space"
        android:text="@string/open_championships_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        android:indeterminate="true"
        android:indeterminateTint="@color/onBackground"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/openTimeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>