<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/low_space"
    android:layout_marginTop="@dimen/low_space"
    android:layout_marginEnd="@dimen/low_space"
    android:background="@drawable/layout_bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/numberCardView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usersNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:padding="@dimen/low_space"
            android:textColor="@color/white"
            android:textSize="26sp"
            tools:text="48" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/low_space"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/groupTextView"
        app:layout_constraintStart_toEndOf="@id/numberCardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Прохоров Алексей" />

    <TextView
        android:id="@+id/userDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/low_space"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/groupTextView"
        app:layout_constraintEnd_toStartOf="@+id/groupTextView"
        app:layout_constraintStart_toEndOf="@id/numberCardView"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        tools:text="D-3 Смоленск" />

    <TextView
        android:id="@+id/groupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/big_space"
        android:padding="@dimen/low_space"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/resultTimeTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="D3-D2" />


    <TextView
        android:id="@+id/resultTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/low_space"
        android:gravity="end"
        android:minWidth="90dp"
        android:padding="@dimen/low_space"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="02:02.33" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberCardView"
        app:layout_constraintTop_toBottomOf="@+id/userDetailsTextView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstAttemptInputTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_attempt"
                android:paddingStart="@dimen/low_space"
                android:paddingEnd="@dimen/low_space"
                android:textColorHint="@color/onBackground"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/onBackground">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstAttemptEditTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/onBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/firstAttemptGetCurrentTimeButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/low_space"
                android:text="@string/time" />

            <com.example.motogymkhana.utils.HorizontalNumberPicker
                android:id="@+id/firstAttemptPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/low_space"
                android:layout_marginEnd="@dimen/low_space" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/firstAttemptSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/low_space"
                android:text="@string/is_fail"
                android:textColor="@color/onBackground"
                android:textSize="18sp"
                android:theme="@style/MySwitch"
                tools:checked="true" />

            <Button
                android:id="@+id/firstAttemptSaveButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/low_space"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondAttemptInputTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_attempt"
                android:paddingStart="@dimen/low_space"
                android:paddingEnd="@dimen/low_space"
                android:textColorHint="@color/onBackground"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/onBackground">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondAttemptEditTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/onBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/secondAttemptGetCurrentTimeButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/low_space"
                android:text="@string/time" />

            <com.example.motogymkhana.utils.HorizontalNumberPicker
                android:id="@+id/secondAttemptPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/low_space"
                android:layout_marginEnd="@dimen/low_space" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/secondAttemptSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/low_space"
                android:text="@string/is_fail"
                android:textColor="@color/onBackground"
                android:textSize="18sp"
                android:theme="@style/MySwitch" />

            <Button
                android:id="@+id/secondAttemptSaveButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/low_space"
                android:minWidth="@dimen/low_space"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>